--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>G3 Architect</title>
     <link rel="stylesheet" href="styles/architect.css">
 </head>
-<body>
+<body class="work-sans-font">
     <!-- Header section starts here -->
      <header>
 
