--- a/index.html
+++ b/index.html
@@ -84,6 +84,23 @@
             </div>
           </section>
           <!--some fact section ends here  -->
+          <!-- our sponsor section starts here -->
+           <section class="our-sponsors">
+            <div class="sponsor-info">
+                <h2 class="section-title">Our Sponspors</h2>
+                <p class="text-light-gray">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration. 
+                </p>
+            </div>
+            <div class="sponsor-companise">
+                <img src="./images/sponsors/amazon.png" alt="">
+                <img src="./images/sponsors/google.png" alt="">
+                <img src="./images/sponsors/spotify.png" alt="">
+                <img src="./images/sponsors/figma.png" alt="">
+                <img src="./images/sponsors/telerama.png" alt="">
+            </div>
+           </section>
+           <!-- our sponsor section ends here -->
        </main>
      <!-- Header section ends here -->
       <!-- Header section starts here -->
