--- a/index.html
+++ b/index.html
@@ -46,7 +46,46 @@
 
          </section>
         <!-- Team section ends here -->
-
+         <!-- feature section starts here -->
+          <section class="feature display-flex">
+            <div>
+                <div class="feature-st-title">
+                    <h3 id="feature-section-title" class="section-title">Features you will <br> love & enjoy</h3>
+                    <p class="text-light-gray">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+                </div>
+               
+                <!-- feature card container -->
+                 <div class="feature-card-container">
+                    <div class="feature-card">
+                        <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                     </div>
+                     <div class="feature-card">
+                        <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                     </div>
+                     <div class="feature-card">
+                        <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                     </div>
+                     <div class="feature-card">
+                        <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                     </div>
+                 </div>
+            </div>
+             <div class="feature-architect">
+                <img src="./images/architect.png" alt="">
+                <button id="experience-badge" class="btn-primary">
+                    <span id="experience-year">10+Years</span>
+                    <br>
+                    <span>Experience</span>
+                </button>
+            </div>
+          </section>
+          <!-- feature section ends here -->
          <!-- some fact section starts here -->
           <section>
             <h3 class="section-title">Some Facts</h3>
